objects/Channel_Partner_Authorization__c.object
<CustomObject>
    <fields>
        <fullName>Support_Onsite_Audit_Count__c</fullName>
        <label>Support Onsite Audit Count</label>
        <summaryFilterItems>
            <field>Channel_Partner_on_site_Audit__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Support</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Channel_Partner_on_site_Audit__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Channel_Partner_on_site_Audit__c.Channel_Partner_Authorization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <formula>IF(Support_Onsite_Audit_Count__c &lt;= 0 &amp;&amp; Is_Support_required_to_initiate_Approval__c,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Audit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TLA_instructions_known__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Trademark licence agreement reviewed and ABB authorized value provider label usage instructions reviewed</inlineHelpText>
        <label>TLA instructions known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TLA_status__c</fullName>
        <label>TLA status</label>
        <picklist>
            <picklistValues>
                <fullName>Not planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested to be prepared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepared and send by ABB to address given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed by both parties and attached in the tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Targeted_Products_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Scroll down to Related List &quot;Products in Authorization&quot; to define. Pick on the level advised by BU. (typically product line or product group)</inlineHelpText>
        <label>Targeted Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Targeted_Program__c</fullName>
        <inlineHelpText>Choose the relevant co-operation programs</inlineHelpText>
        <label>Targeted Program</label>
        <picklist>
            <picklistValues>
                <fullName>Technical Cooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Cooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trademark Cooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Technology_transfer_done__c</fullName>
        <inlineHelpText>If relevant, and after agreed payments/requirements are fulfilled</inlineHelpText>
        <label>Technology transfer done</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Relevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tool_for_technical_Cooperations__c</fullName>
        <inlineHelpText>Depending on the program, suitable tools have been applied and in use</inlineHelpText>
        <label>Tool for technical Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tools_and_databases_Notes__c</fullName>
        <label>Tools and databases Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tools_and_databases_access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Access to ABB tools and databases granted as appropriate according to per instructions from Bus</inlineHelpText>
        <label>Tools and databases access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Notes__c</fullName>
        <label>Training Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_program_s_Performed__c</fullName>
        <description>R7A</description>
        <inlineHelpText>As appropriate according to your BU&apos;s specific requirements/instructions.</inlineHelpText>
        <label>Training completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Relevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Customer_Cooperation_Database__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Update Customer / Cooperation Database</inlineHelpText>
        <label>Update Customer / Cooperation Database</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_registered_Country__c</fullName>
        <inlineHelpText>The country the account is in incorporated in. Necessary for preparing the Trademark License Agreement.</inlineHelpText>
        <label>Company Registration Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validation_Notes__c</fullName>
        <label>Validation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBackupMultiselectPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox with flag is needed to query Multiselected Picklist field (Long Text Area).</description>
        <inlineHelpText>Checkbox with flag is needed to query Multiselected Picklist field (Long Text Area).</inlineHelpText>
        <label>isBackupMultiselectPicklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Channel_Partner_Authorizations__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Channel Partner Authorizations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Channel Partner Authorization</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BU_Channel_Approvers_Channel_Partner_Authorization</fullName>
        <filterScope>Queue</filterScope>
        <label>BU Channel Approvers</label>
        <queue>BU_Channel_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Channel Partner Authorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Partner Authorizations</pluralLabel>
    <recordTypes>
        <fullName>AVP_Authorization_Process</fullName>
        <active>true</active>
        <label>AVP Authorization Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Country_Driven</fullName>
        <active>true</active>
        <label>Closed Country Driven</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_driven_Authorization</fullName>
        <active>true</active>
        <label>Country driven Authorization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategic_Co_Operation_Authorization_Process</fullName>
        <active>true</active>
        <label>Strategic Co-Operation Authorization Process</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AuditEndDate_greater_or_equal_Activated</fullName>
        <active>true</active>
        <description>End Dates can not be in the past and before the Authorization activated date</description>
        <errorConditionFormula>AND(OR ( Authorization_Audit_End_Date__c &lt; Today(), Authorization_activated__c &gt; Authorization_Audit_End_Date__c), NOT( $User.Validation_Override__c ),NOT(ISPICKVAL( Record_Status__c , &apos;Draft&apos;) || ISPICKVAL( Record_Status__c , &apos;Outdated&apos;) || ISPICKVAL( Record_Status__c , &apos;Obsolete&apos;)))</errorConditionFormula>
        <errorMessage>Authorization/Audit End Date can not be in past and should be greater or equal to Authorization activated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Audit_Process_Requested_Check</fullName>
        <active>true</active>
        <description>Created as part of R7</description>
        <errorConditionFormula>AND(NOT($User.Validation_Override__c), Audit_Process_Requested__c, ISPICKVAL(Completed_onsite_Audit_Prototype_Review__c, &apos;Not Relevant&apos;))</errorConditionFormula>
        <errorDisplayField>Completed_onsite_Audit_Prototype_Review__c</errorDisplayField>
        <errorMessage>Completed onsite Audit/Prototype Review cannot be &apos;Not Relevant&apos; when Audit Process is Requested</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Authorization_End_Date_to_far_in_future</fullName>
        <active>true</active>
        <description>R7A - Channel Authorization validity Period of Authorization</description>
        <errorConditionFormula>AND((RecordType.DeveloperName = &apos;Country_driven_Authorization&apos; || RecordType.DeveloperName = &apos;Closed_Country_Driven&apos;)
,Authorization_Audit_End_Date__c &gt;Today()+1095,NOT( $User.Validation_Override__c ))</errorConditionFormula>
        <errorMessage>The Authorization/Audit End Date cannot be set to more than 3 Years into the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CountryRecordtype</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
    AND(
        ISNEW(),
        $RecordType.Name =&quot;AVP_Authorization_Process&quot;

     ),
TRUE,
FALSE


)</errorConditionFormula>
        <errorMessage>Create record from Channel Market Scope</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDate_should_greater_or_equal_to_Start</fullName>
        <active>false</active>
        <description>End Dates can not be in the past and before the Start Date</description>
        <errorConditionFormula>AND(OR (Channel_Agreement_end_date__c &lt; Today(), Channel_Agreement_Start_Date__c &gt; Channel_Agreement_end_date__c ), NOT($User.Validation_Override__c ),NOT(ISPICKVAL( Record_Status__c , &apos;Draft&apos;) || ISPICKVAL( Record_Status__c , &apos;Outdated&apos;)))</errorConditionFormula>
        <errorMessage>Channel Agreement End Date cannot be in past and should be greater or equal to Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GUID_should_same_in_businessplan_account</fullName>
        <active>false</active>
        <description>R7A</description>
        <errorConditionFormula>Channel_Partner_Business_Plan__c != NULL &amp;&amp; Account__c != NULL &amp;&amp; Account__r.Root_Account_GUID__c !=  Channel_Partner_Business_Plan__r.Account__r.Root_Account_GUID__c</errorConditionFormula>
        <errorMessage>The associated Channel Partner Business Plan needs to be valid for an Account within the Hierarchy of the Account associated to this Authorization.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Channel_Partner_Auth_On_Bulk_Account</fullName>
        <active>true</active>
        <description>Related Account cannot be Bulk Business.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.Validation_Override__c.Exclude__c),
    CONTAINS(LOWER(Account__r.Name), &apos;bulk business&apos;)
)</errorConditionFormula>
        <errorMessage>Related Account cannot be Bulk Business.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rejection_Reason_Validation</fullName>
        <active>true</active>
        <description>R7A - The Rejection Reason Picklist should have a Validation Rule that it needs to be filled if Approval Progress gets set to “Rejected</description>
        <errorConditionFormula>((RecordType.DeveloperName== &quot;AVP_Authorization_Process&quot; ||
RecordType.DeveloperName == &quot;Strategic_Co_Operation_Authorization_Process&quot;) &amp;&amp;TEXT(Approval_Progress__c)== &apos;Rejected&apos; &amp;&amp; ISBLANK(TEXT(Rejected_Reason__c)))</errorConditionFormula>
        <errorMessage>&quot;Rejected Reason &quot; - field is mandatory when Approval Progress is Rejected</errorMessage>
    </validationRules>
</CustomObject>